Changes with mod_fastcgi 2.2.3

 *) Fix the call to setsockopt() to disable Nagle.  [based on a bug report by
    Johannes Plassmann <johannes.plassmann@pdb.siemens.de>]

Changes with mod_fastcgi 2.2.2

 *) Added support for blocking connect()s by setting appConnTimeout to 0.
    Non-blocking connect()s (the default) can be troublesome on some platforms.
    Its expected that blocking connect()s will become the default (and
    non-blocking connect()s will become optional) in the next release.

 *) Dump a compile time error if the version of Apache is too old.

 *) Wrap the SIGPIPE handler manipulation code such that it is only applicable
    to Apache releases prior to 1.3.6.

 *) Minor tweaks for RUSSIAN_APACHE.  [Sergey Gershtein <sg@mplik.ru>]

 *) Dynamic updates: 
 
    Always restart a failed dynamic application if it is the last instance.
    This means there once started there will always be at least one process
    instance of a dynamic application.  
    
    Send PLEASE_START to the PM when a connect() results in an ECONNREFUSED.
    ECONNREFUSED means the listen queue is full (or there isn't one).  Asking
    the PM to start (another) application instance may help empty it faster.
    
    Change two sleep() calls to select() based snoozes because alarm() is in
    effect and sleep() and alarm() don't always play nice together.
    
    Fixed a couple of error messages.

 *) Fix -listen-queue-depth arg on FastCgiConfig (dynamic).  Previously it
    was ignored and the default was always used.

 *) Allow the -initial-env argument to be used to pass variables from the 
    Apache process environment to the FastCGI server (by specifying a 
    variable name without the "=" or a value).  [suggested by 
    Martin Lichtin <lichtin@oanda.com>]

 *) Cleanup some debug macros.

 *) Improved script stderr handling.  [based on suggestions by 
    David Birnbaum <davidb@chelsea.net>]
    